Add JavaFX setup instructions, same as Lab04