@@ -21,6 +21,50 @@ An individual repository for you for this lab has been created for you on the CS
 
 `git clone gitlab@gitlab.cse.unsw.EDU.AU:COMP2511/21T2/students/z555555/21T2-cs2511-lab05.git`
 
+<details>
+<summary>If you haven't managed to setup JavaFX yet, follow these instructions.</summary>
+
+## Installing JavaFX on your own system
+
+Delete the *symlink_javafx* symbolic link, then download and unzip the latest version of the JavaFX JDK for Java 11 for your Operating System (taking into account if you have a 64 or 32 bit machine), and transfer the contents of the *lib* folder inside the JDK download into the *lib* folder on your cloned repository. You will also need to change the [*launch.json*](.vscode/launch.json) file to refer to **"./lib"** instead of **./lib/symlink_javafx** in the *"vmArgs"* configuration (note these modifications were tested on Windows 10) as per below;
+
+```diff
+{
+    "configurations": [
+        {
+            "type": "java",
+            "name": "Launch CheckerApplication",
+            "request": "launch",
+            "mainClass": "unsw.crown.CheckerApplication",
+            "projectName": "lab04_acb2551e",
+-           "vmArgs": "--module-path ./lib/symlink_javafx --add-modules javafx.controls,javafx.fxml,javafx.media -enableassertions"
++           "vmArgs": "--module-path ./lib --add-modules javafx.controls,javafx.fxml,javafx.media -enableassertions"
+        }
+    ]
+}
+```
+
+You may also need to copy the contents of the *bin* folder in the unzipped JavaFX JDK download into a *bin* folder under the root directory of your cloned repository (e.g. for Windows).
+
+The following version of the JavaFX JDK is recommended if you choose to run it on your computer, since it is the same version as on the CSE machine:
+
+https://gluonhq.com/products/javafx/
+
+Note that if you deviate from this precise directory structure, you may need to modify the VSCode configuration in [*launch.json*](.vscode/launch.json) to be able to run the game in VSCode.
+
+If these steps worked (and you setup java, and the recommended VSCode extensions properly), you should be able to run the starter code game.
+
+## `JavaFX Runtime Components are missing`
+
+If running locally make sure that you've followed the steps above.  If running on VLab/CSE, then make sure that ALL launch configurations in `.vscode/launch.json` contain the line;
+
+```json
+"vmArgs": "--module-path ./lib/symlink_javafx --add-modules javafx.controls,javafx.fxml,javafx.media -enableassertions"
+```
+
+It's just VSCode creating new configurations rather than recycling the old ones.  This seems 
+</details>
+
 ## Preparation
 
 Here are a series of videos, lectures and self-learning exercises we recommend you take a look at before completing the lab exercise, or as you complete the exercise to aid in your understanding.
